2011-05-05  Lorenzo Natale  <lorenzo.natale@iit.it>
    * src/libYARP_OS/include/yarp/os/Run.h
    * src/libYARP_OS/src/Run.cpp
      removed subsequent attempts to connect to server, handle
      cases in which the server is not available

2011-04-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/tcpros_carrier/TcpRosStream.h: add missing
	header file [thanks Giorgio Metta]

2011-04-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Log.h: stack trace to
	stderr instead of stdout, d'oh [thanks Lorenzo Natale]

2011-04-27  Lorenzo Natale  <lorenzo.natale@iit.it>

    * src/libYARP_sig/include/yarp/sig/Vector.h
    * src/libYARP_math/include/yarp/math/Math.h
    * src/libYARP_math/src/math.cpp 
    * src/libYARP_math/harness/MathTest.cpp:
    
    A bunch of changes to improve error checking on Arjan Gijsberts 
    test case involving Vector/Matrix division by scalar [thanks Arjan Gijsberts]

    made Vector(size_t c) explicit
    implemented operator/ by scalar for Vector and Matrix
    added missing operator * by scalar for Matrix
    regression tests

    
2011-04-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindFFMPEG.cmake: apply patch from Gianluca to build
	on his OSX setup [thanks Gianluca Massera]

2011-04-07  Paul Fitzpatrick  <paulfitz@farmMac1.local>

	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: make
	YARP-without-ACE work on OSX.

2011-04-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpSystemCheck.cmake: add experimental SKIP_ACE option
	to compile YARP without using ACE.  Support for some features
	is dropped, and only Linux is targeted.  This draws on
	Anne van Rossum's yarp-lightweight fork at 
	https://dev.almende.com/svn/yarp-lightweight
	[thanks Anne van Rossum].

2011-03-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/mjpeg_carrier/CMakeLists.txt: add option to 
	pass mjpeg images through uncompressed [thanks Philipp Robbel]
