@@ -1,3 +1,8 @@
+2011-05-06  Lorenzo Natale  <lorenzo.natale@iit.it>
+    * src/libYARP_OS/include/yarp/os/Run.h
+    * src/libYARP_OS/src/Run.cpp
+    general performance optimization
+
 2011-05-05  Lorenzo Natale  <lorenzo.natale@iit.it>
     * src/libYARP_OS/include/yarp/os/Run.h
     * src/libYARP_OS/src/Run.cpp
